--- a/src/component/Home.css
+++ b/src/component/Home.css
@@ -50,7 +50,8 @@
   }
   .chat-container {
     width: 100%;
-    height: 95vh;
+    height: 90vh;
+    margin-top: 9vh;
     background: transparent;
     border-radius: 4px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -133,6 +134,16 @@
     padding: 10px 10px 0px 10px;
     position: relative;
     /* margin-top: 3rem; */
+  }
+
+  .emoji-picker-container {
+    position: absolute;
+    top: 200px; /* Adjust the value based on your preference */
+    right: 10px;
+    background-color: #fff;
+    border-radius: 5px;
+    padding: 10px;
+    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
   }
  
   
